Fix layout issue

--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -33,6 +33,7 @@
 }
 
 .section {
+  width: 100%;
   margin-bottom: 2rem;
 }
 
